# projeto-ETL

./: LICENSE  README.md  averages.csv  averages.db  dune-project  output.csv  output.db  projeto_ETL.opam
lib/: csv_reader.ml  csv_writer.ml  data_processor.ml  dune  types.ml  utils.ml
test/: dune  test_projeto_ETL.ml
